--- a/style.css
+++ b/style.css
@@ -132,6 +132,18 @@ header .titulo h1 {
     display:block;
 }
 
+/* escala*/
+
+.escala {
+    transition: all 3s;
+    position:relative;
+}
+
+.escala:hover {
+    transform: scale(1.1);
+    z-index:2;
+}
+
 /*Formulario reserva */
 .formreserva {
     background-color: white;
