Agrego excursiones, restaurante y contacto

--- a/style.css
+++ b/style.css
@@ -209,6 +209,7 @@ footer {
     background-color: #464f41;
     padding: 20px 20px 0 20px;
     color: white;
+    height:150px;
 }   
 
 .footer {
