Agrego wireframes a github

--- a/style.css
+++ b/style.css
@@ -207,7 +207,7 @@ header .titulo h1 {
 
 footer {
     background-color: #464f41;
-    padding: 20px 20px 0 20px;
+    padding: 20px 20px 20px 20px;
     color: white;
     height:150px;
 }   
