--- a/scss/_contacto.scss
+++ b/scss/_contacto.scss
@@ -5,7 +5,7 @@
 .contacto{
     text-align:center;
     h1{
-        font-size:50px;
+        font-size:40px;
         line-height:80px;
         color: $color-secundario;
     }
@@ -26,19 +26,21 @@ main{
             align-items:center;
             margin: 20px;
             label{
-                width:200px;
-                text-align:center;
+                width:110px;
                 font-size:30px;
-                padding:15px;
+                padding:15px 0;
                 color: $color-secundario;
             }
             input{
-                width:430px;
-                height:70px;
+                font-size:25px;
+                width:190px;
+                height:40px;
                 color:#464f41
             }
             textarea{
-                width:430px;
+                font-size:20px;
+                width:200px;
+                color:$color-secundario;
             }
             .boton{
                 cursor:pointer;
@@ -56,7 +58,7 @@ main{
         max-height: 756px;
         h2 {
             text-align:center;
-            font-size: 40px;
+            font-size: 30px;
             font-weight:bold;
             padding: 30px;
             color:$color-secundario;
