--- a/scss/style.scss
+++ b/scss/style.scss
@@ -7,7 +7,8 @@
     margin: 0;
     padding: 0;
 }
-html{
+
+html {
     font-size: 62.5%
 }
 
@@ -30,10 +31,10 @@ body {
 
 .navbar-nav {
     margin-left: auto;
-    padding:15px;
+    padding: 15px;
 }
 
-.navbar-nav a{
+.navbar-nav a {
     color: white;
 }
 
@@ -43,36 +44,36 @@ body {
 
 
 header .titulo h1 {
-    display:flex;
+    display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
     height: 420px;
     background-image: url(../Imagenes/fondodeportada.jpg);
-    background-size:cover;
+    background-size: cover;
     background-repeat: no-repeat;
     font-size: 40px;
-    font-weight:bold;
-    color:white;
+    font-weight: bold;
+    color: white;
 }
 
 .experiencia {
-    display:flex;
-    flex-direction:column;
+    display: flex;
+    flex-direction: column;
     height: 800px;
     padding: 30px;
-    align-items:center;
+    align-items: center;
 }
 
 .experiencia h2 {
-    text-align:center;
+    text-align: center;
     font-size: 40px;
     font-weight: 700;
     color: $color-secundario;
 }
 
 .experiencia p {
-    text-align:center;
+    text-align: center;
     font-size: 25px;
     color: $color-secundario;
 }
@@ -81,40 +82,40 @@ header .titulo h1 {
     height: 400px;
     width: auto;
     border-radius: 2em 2em 2em 2em;
-    text-align:center;
+    text-align: center;
 }
 
 /*cartas*/
 .row {
-    margin:15px 0;
+    margin: 15px 0;
     row-gap: 20px;
-    justify-content:space-around;
+    justify-content: space-around;
 }
 
 .card {
     width: 100%;
-    height:100%;
+    height: 100%;
     margin-bottom: 15px;
     border: solid white 2px;
     border-radius: 1em 1em 1em 1em;
 }
 
 .card-body {
-    display:flex;
+    display: flex;
     flex-direction: column;
 }
 
 .card-body p {
-    flex-grow:1;
+    flex-grow: 1;
 }
 
 .card img {
     border-radius: 1em 1em 0 0;
     max-width: 100%;
-    max-height: 450px;   
+    max-height: 450px;
 }
 
-.card h3 { 
+.card h3 {
     text-align: center;
     font-size: 30px;
     font-weight: bold;
@@ -125,90 +126,95 @@ header .titulo h1 {
     font-size: 23px;
 }
 
-.card a { 
+.card a {
     background-color: #56776c;
     text-decoration: none;
     color: white;
     font-size: 25px;
     padding: 10px;
     margin: 5px 120px;
-    display:block;
+    display: block;
 }
 
-.card .btn:hover{
-    background-color:rgb(209, 203, 203);
+.card .btn:hover {
+    background-color: rgb(209, 203, 203);
 }
 
 /* escala*/
 
 .escala {
     transition: all 3s;
-    position:relative;
+    position: relative;
 }
 
 .escala:hover {
     transform: scale(1.1);
-    z-index:2;
+    z-index: 2;
 }
 
-/*Formulario reserva */
+/*Formulario*/
+
 .formreserva {
     background-color: white;
-    height:465px;
-    line-height: 35px;
+    height:480px;
+    line-height:35px;
 }
 
-.formreserva h2 {
-    text-align: center;
-    font-size: 50px;
+.formreserva h2{
+    text-align:center;
+    font-size:40px;
     color: $color-secundario;
-    padding: 20px 0 0 0;
+    padding:20px 0 0 0;
 }
 
 .formreserva form {
-    width: 600px;
-    height:325px;
-    padding:10px;
-    margin: auto;
+    width: 80%;
+    height:350px;
+    padding: 10px;
+    margin:auto;
     margin-top:20px;
     color: $color-secundario;
 }
 
 .formreserva form .inputs {
     display:block;
-    width: 100%;
-    background-color: white; 
+    width:100%;
+    background-color:white;
     margin: 15px;
-    padding:5px;
-    font-size: 25px;
+    padding: 5px;
     border: solid 2px $color-secundario;
     color: $color-secundario;
+    height: 51.5px;
+    font-size: 25px;
 }
 
 .formreserva form .check {
     background-color: white;
-    border: solid 2px $color-secundario;
+    border:solid 2px $color-secundario;
     color: $color-secundario;
     width: 168px;
-    height:51.5;
-    font-size:18.5px;
+    height: 51.5px;
+    font-size: 25px;
 }
 
-.formreserva form .label {
+.formreserva form .label{
+    font-size: 20px;
+    margin-left:10px;
+    width:100px;
+}
+
+.formreserva form .label2 {
+    width:100px;
+    font-size: 20px;
     margin-left: 10px;
-    
-}
 
-.formreserva .label2 {
-    margin-left: 41px;
-    margin-right:0;
 }
 
 .formreserva .boton {
     cursor:pointer;
 }
 
-.formreserva .boton:hover {
+.formreserva .boton:hover{
     box-shadow: 1px 2px 2px 1px grey;
 }
 
@@ -218,44 +224,44 @@ footer {
     background-color: $color-secundario;
     padding: 20px 20px 20px 20px;
     color: white;
-    height:280px;
+    height: 280px;
     margin-bottom: 7px;
-}   
+}
 
 .footer {
-    display:flex;
-    flex-direction:column;
-    flex-basis:50%;
+    display: flex;
+    flex-direction: column;
+    flex-basis: 50%;
     justify-content: space-between;
-    
+
 }
 
 .contacto {
-    display:flex;
-    flex-direction:column;
+    display: flex;
+    flex-direction: column;
     align-items: center;
     list-style-type: none;
 }
 
 .contacto li {
-    font-size:20px;
+    font-size: 20px;
 }
 
 .redes-sociales {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    align-items:center;
+    align-items: center;
     list-style-type: none;
     padding: 0 20px 0 0;
     gap: 30px;
 }
 
 .redes-sociales li {
-    font-size:35px;
+    font-size: 35px;
     color: white;
     padding: 20px;
-    
+
 }
 
 .redes-sociales li a {
@@ -263,8 +269,8 @@ footer {
 }
 
 .copy {
-text-align: center;
-font-size: 15px;
+    text-align: center;
+    font-size: 15px;
 
 }
 
@@ -272,18 +278,18 @@ font-size: 15px;
 /*Alojamiento*/
 
 header .alojamiento h1 {
-    display:flex;
+    display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
     height: 420px;
     background-image: url(../Imagenes/portadaalojamiento.jpg);
-    background-size:cover;
+    background-size: cover;
     background-repeat: no-repeat;
     font-size: 40px;
-    font-weight:bold;
-    color:white;
-    padding-top:15px;
+    font-weight: bold;
+    color: white;
+    padding-top: 15px;
 }
 
 .intro {
@@ -291,13 +297,13 @@ header .alojamiento h1 {
     border-radius: 1em 1em 1em 1em;
     padding: 10px;
     margin-top: 15px;
-    margin-bottom:15px;
+    margin-bottom: 15px;
     background-color: white;
 }
 
 .intro h2 {
     color: $color-secundario;
-    font-size:35px;
+    font-size: 35px;
     padding-bottom: 5px;
 
 }
@@ -313,34 +319,319 @@ header .alojamiento h1 {
 
 
 
-.cabananorte, .cabanasur, .glampings {
-    display:flex;
-    flex-direction:column;
+.cabananorte,
+.cabanasur,
+.glampings {
+    display: flex;
+    flex-direction: column;
     padding: 15px;
     text-align: center;
     background-color: $color-primario;
 }
 
-.cabananorte div, .cabanasur div, .glampings div {
+.cabananorte div,
+.cabanasur div,
+.glampings div {
     background-color: white;
 }
 
-.cabananorte h2, .cabanasur h2, .glampings h2 {
+.cabananorte h2,
+.cabanasur h2,
+.glampings h2 {
     font-size: 35px;
-    color:$color-secundario;
+    color: $color-secundario;
 }
 
-.cabananorte p, .cabanasur p, .glampings p {
-    color:$color-secundario;
+.cabananorte p,
+.cabanasur p,
+.glampings p {
+    color: $color-secundario;
     font-size: 25;
 }
 
-.cabananorte img, .cabanasur img, .glampings img {
-   max-width: 100%;
-   padding: 15px;
-   width:100%;
-   max-height:500px;
-   
+.cabananorte img,
+.cabanasur img,
+.glampings img {
+    max-width: 100%;
+    padding: 15px;
+    width: 100%;
+    max-height: 500px;
+
 }
 
-@import "mediaqueries";
+@media (min-width:768px) {
+    header .titulo h1 {
+        height: 400px;
+    }
+
+    footer {
+        height: 280px;
+    }
+}
+
+@media (min-width: 1024px) {
+
+    header .titulo h1,
+    header .alojamiento h1,
+    header .excursiones,
+    header .restaurante h1 {
+        height: 600px;
+    }
+
+    .experiencia {
+        flex-direction: row;
+        gap: 15px;
+        height: 400px;
+        padding: 10px;
+        margin-top: 50px;
+        margin-bottom: 50px;
+    }
+
+    .cartas {
+        margin-bottom: 50px;
+    }
+
+    /*Alojamientos*/
+    .cabananorte,
+    .cabanasur,
+    .glampings {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 416px auto;
+        grid-template-areas:
+            "texto imggrande"
+            "imgchica1 imgchica2";
+        max-height: auto;
+        padding: 10px 100px;
+    }
+
+    .cabananorte .texto,
+    .cabanasur .texto,
+    .glampings .texto {
+        grid-area: texto;
+    }
+
+    .cabananorte .imggrande,
+    .cabanasur .imggrande,
+    .glampings .imggrande {
+        grid-area: imggrande;
+    }
+
+    .cabananorte .imggrande img,
+    .cabanasur .imggrande img,
+    .glampings .imggrande img {
+        height: 416px;
+        text-align: center;
+    }
+
+    .cabananorte .imgchica1,
+    .cabanasur .imgchica1,
+    .glampings .imgchica1 {
+        grid-area: imgchica1;
+        max-width: 100%;
+        max-height: auto;
+    }
+
+    .cabananorte .imgchica1 img,
+    .cabanasur .imgchica1 img,
+    .glampings .imgchica1 img {
+        height: 600px;
+    }
+
+    .cabananorte .imgchica2,
+    .cabanasur .imgchica2,
+    .glampings .imgchica2 {
+        grid-area: imgchica2;
+        max-width: 100%;
+        max-height: auto;
+    }
+
+    .cabananorte .imgchica2 img,
+    .cabanasur .imgchica2 img,
+    .glampings .imgchica2 img {
+        height: 600px;
+    }
+
+    .cabananorte .texto,
+    .cabanasur .texto,
+    .glampings .texto {
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        justify-content: center;
+    }
+
+    .cabanasur {
+        grid-template-areas:
+            "imggrande texto"
+            "imgchica1 imgchica2";
+    }
+
+    /*Excursiones*/
+
+    main {
+
+        .actividades-invierno,
+        .actividades-verano {
+
+            .actividad-invierno-1,
+            .actividad-invierno-2,
+            .actividad-invierno-3,
+            .actividad-verano-1,
+            .actividad-verano-2 {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                padding: 20px 0 5px 0;
+
+                h3 {
+                    font-size: 30px;
+                }
+
+                ul {
+                    li {
+                        font-size: 20px;
+                        list-style-type: square;
+
+                        ol {
+                            li {
+                                font-size: 17px;
+                                list-style-type: lower-roman;
+                            }
+                        }
+                    }
+                }
+            }
+
+            .img-invierno-1,
+            .img-invierno-2,
+            .img-invierno-3,
+            .img-verano-1,
+            .img-verano-2 {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                max-height: 400px;
+
+                img {
+                    width: 50%;
+                    height: 400px;
+                }
+            }
+        }
+    }
+
+    /*Restaurante*/
+    main {
+        .platos {
+            .grid-platos {
+                flex-direction: row;
+                flex-wrap: wrap;
+            }
+        }
+    }
+
+    /*Contacto*/
+
+    .contacto {
+        h1 {
+            font-size: 50px;
+        }
+    }
+
+    main {
+        .form-contacto {
+            form {
+                div {
+                    label {
+                        width: 200px;
+                        font-size: 40px;
+                        padding: 15px 15px;
+                    }
+
+                    input {
+                        width: 600px;
+                        height: 70px;
+                        font-size: 30px;
+                    }
+
+                    textarea {
+                        width: 600px;
+                        height: auto;
+                        font-size: 30px;
+                    }
+                }
+            }
+        }
+    }
+
+    /*Formulario reserva */
+    .formreserva {
+        background-color: white;
+        height: 580px;
+        line-height: 35px;
+    }
+
+    .formreserva h2 {
+        text-align: center;
+        font-size: 50px;
+        color: $color-secundario;
+        padding: 20px 0 0 0;
+    }
+
+    .formreserva form {
+        width: 600px;
+        height: 325px;
+        padding: 10px;
+        margin: auto;
+        margin-top: 20px;
+        color: $color-secundario;
+    }
+
+    .formreserva form .inputs {
+        display: block;
+        width: 100%;
+        background-color: white;
+        margin: 15px;
+        padding: 5px;
+        font-size: 25px;
+        border: solid 2px $color-secundario;
+        color: $color-secundario;
+    }
+
+    .formreserva form .check {
+        background-color: white;
+        border: solid 2px $color-secundario;
+        color: $color-secundario;
+        width: 168px;
+        height: 51.5;
+        font-size: 18.5px;
+    }
+
+    .formreserva form .label {
+        margin-left: 10px;
+
+    }
+
+    .formreserva .label2 {
+        margin-left: 41px;
+        margin-right: 0;
+    }
+
+    .formreserva .boton {
+        cursor: pointer;
+    }
+
+    .formreserva .boton:hover {
+        box-shadow: 1px 2px 2px 1px grey;
+    }
+
+    /*footer*/
+    footer {
+        height: 170px;
+
+        .footer {
+            flex-direction: row;
+        }
+    }
+}
