--- a/scss/_restaurante.scss
+++ b/scss/_restaurante.scss
@@ -10,7 +10,7 @@
     background-image: url(../Imagenes/portada-restaurante.jpg);
     background-size:cover;
     background-repeat: no-repeat;
-    font-size: 40px;
+    font-size: 25px;
     font-weight:bold;
     color:white;
     padding-top:15px;
@@ -23,7 +23,7 @@ main{
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        font-size: 30px;
+        font-size: 15px;
         margin-top:30px;
         margin-bottom:30px;
         p{
@@ -43,21 +43,21 @@ main{
         align-items: center;
         gap: 30px;
         img{
-            width:600px;
-            height:450px;
+            width:95%;
+            height:350px;
 
         }
     }
     .platos {
         margin-top: 50px;
-        margin-bottom: 50px;
+        margin-bottom: 25px;
         h2{
             background-color:white;
             color:#464f41;
             text-align:center;
             margin:auto;
             padding:20px;
-            font-size:30px;
+            font-size:20px;
             font-weight: bold;
             margin-bottom: 30px;
         }
@@ -69,8 +69,8 @@ main{
             justify-content: center;
             align-items: center;
             img{
-                width:400px;
-                height:400px;
+                width:95%;
+                height:350px;
                 text-align:center;
             }
             
