--- a/scss/style.scss
+++ b/scss/style.scss
@@ -652,17 +652,8 @@ header .alojamiento h1 {
             "imgchica1 imgchica2";
     }
 
-    .intro {
-        width:90%;
-        margin-left: 70px;
-    }
-
-    .intro h2{
-        font-size: 30px;
-    }
-
-    .intro li{
-        font-size: 25px;
+    .glampings {
+        margin-bottom: 15px;
     }
 
     /*Excursiones*/
